fix(arc-867): add overflow-wrap: break-word; to Html component

--- a/src/modules/media/components/Metadata/Metadata.module.scss
+++ b/src/modules/media/components/Metadata/Metadata.module.scss
@@ -24,7 +24,6 @@
 		width: 100%;
 		padding: $spacer-md 0;
 		border-top: $divider-black;
-		overflow-wrap: break-word;
 	}
 
 	&__item-title {
